--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 link_libraries(krill)
 include_directories(${CMAKE_HOME_DIRECTORY}/krill/include)
 
-add_executable(test_FaModels test_FaModels.cpp)
+add_executable(test_automata test_automata.cpp)
