--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,4 @@ link_libraries(krill)
 include_directories(${CMAKE_HOME_DIRECTORY}/krill/include)
 
 add_executable(test_automata test_automata.cpp)
+add_executable(test_grammar test_grammar.cpp)
