--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(test_regex test_regex.cpp)
 add_executable(test_lexical test_lexical.cpp)
 add_executable(test_syntax test_syntax.cpp)
 add_executable(test_demo test_demo.cpp)
+add_executable(test_minic test_minic.cpp)
 
 # add_custom_target(test_codegen 
 # 	DEPENDS test_codegen_c test_codegen_cpp test_codegen_regex
