--- a/krill/CMakeLists.txt
+++ b/krill/CMakeLists.txt
@@ -1,10 +1,20 @@
 include_directories(include)
 
 include(FetchContent)
+
+# Use fmt for formatting string.
 message("Fetching fmt")
 FetchContent_Declare(fmt URL https://github.com/fmtlib/fmt/archive/refs/tags/8.0.1.tar.gz)
 FetchContent_MakeAvailable(fmt)
 message("Fetching Complete!")
+
+# Use SPDLOG for logging.
+message("Fetching SPDLOG")
+FetchContent_Declare(
+  spdlog URL https://github.com/gabime/spdlog/archive/refs/tags/v1.11.0.tar.gz
+)
+FetchContent_MakeAvailable(spdlog)
+message("Fetch Complete!")
 
 file (GLOB_RECURSE KRILL_HEADER include/*.h)
 file (GLOB_RECURSE KRILL_SRC    src/*.cpp)
@@ -12,5 +22,6 @@ file (GLOB_RECURSE KRILL_SRC    src/*.cpp)
 add_library(krill ${KRILL_SRC} ${KRILL_HEADER})
 target_link_libraries(krill PUBLIC fmt)
 
+# for debug
 set(CMAKE_CXX_FLAGS   "-g")
-# set(CMAKE_CXX_FLAGS   "-Wall")
+set(CMAKE_CXX_FLAGS   "-Wall")
