try to support ambiguous grammar (step-1)

--- a/krill/CMakeLists.txt
+++ b/krill/CMakeLists.txt
@@ -13,6 +13,12 @@ message("Fetching SPDLOG")
 FetchContent_Declare(
   spdlog URL https://github.com/gabime/spdlog/archive/refs/tags/v1.11.0.tar.gz
 )
+# FetchContent_Declare(
+#   spdlog
+#   GIT_REPOSITORY https://github.com/gabime/spdlog.git
+#   GIT_TAG        76fb40d95455f249bd70824ecfcae7a8f0930fa3 # release-1.10.0
+# )
+set(SPDLOG_FMT_EXTERNAL ON) # to resolve confilt between spdlog and fmt
 FetchContent_MakeAvailable(spdlog)
 message("Fetch Complete!")
 
@@ -21,6 +27,7 @@ file (GLOB_RECURSE KRILL_SRC    src/*.cpp)
 
 add_library(krill ${KRILL_SRC} ${KRILL_HEADER})
 target_link_libraries(krill PUBLIC fmt)
+target_link_libraries(krill PUBLIC spdlog::spdlog)
 
 # for debug
 set(CMAKE_CXX_FLAGS   "-g")
