--- a/krill/CMakeLists.txt
+++ b/krill/CMakeLists.txt
@@ -13,18 +13,21 @@ message("Fetching SPDLOG")
 FetchContent_Declare(
   spdlog URL https://github.com/gabime/spdlog/archive/refs/tags/v1.10.0.tar.gz
 )
-# FetchContent_Declare(
-#   spdlog
-#   GIT_REPOSITORY https://github.com/gabime/spdlog.git
-#   GIT_TAG        76fb40d95455f249bd70824ecfcae7a8f0930fa3 # release-1.10.0
-# )
 set(SPDLOG_FMT_EXTERNAL ON) # to resolve confilt between spdlog and fmt
 FetchContent_MakeAvailable(spdlog)
 message("Fetch Complete!")
+
+# Use magic_enum to support static reflection for enums.
+message("Fetching magic_enum")
+FetchContent_Declare(
+  magic_enum URL https://github.com/Neargye/magic_enum/archive/refs/tags/v0.8.1.tar.gz
+)
+FetchContent_MakeAvailable(magic_enum)
+message("Fetching Complete!")
 
 file (GLOB_RECURSE KRILL_HEADER include/*.h)
 file (GLOB_RECURSE KRILL_SRC    src/*.cpp)
 
 add_library(krill ${KRILL_SRC} ${KRILL_HEADER})
 target_link_libraries(krill PUBLIC fmt)
-target_link_libraries(krill PUBLIC spdlog::spdlog)
+target_link_libraries(krill PUBLIC spdlog::spdlog magic_enum::magic_enum)
