--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,10 +7,4 @@ add_executable(test_codegen test_codegen.cpp)
 add_executable(test_regex test_regex.cpp)
 add_executable(test_lexical test_lexical.cpp)
 add_executable(test_syntax test_syntax.cpp)
-add_executable(test_minic 
-			   test_minic.cpp
-			   minic_parser.cpp
-			   minic_sdt.cpp
-			   minic_ir_opt.cpp
-			   minic_backend.cpp
-			   )
+add_executable(test_minic test_minic.cpp)
