--- a/.github/workflows/cppbuild.yml
+++ b/.github/workflows/cppbuild.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xmake-io/github-action-setup-xmake@v1
         with:
-          - xmake-version: latest
+          xmake-version: latest
       - name: configure
         run: cd ${{ github.workspace }} && xmake f -y
       - name: build
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xmake-io/github-action-setup-xmake@v1
         with:
-          - xmake-version: latest
+          xmake-version: latest
       - name: configure
         run: cd ${{ github.workspace }} && xmake f -y
       - name: build
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xmake-io/github-action-setup-xmake@v1
         with:
-          - xmake-version: latest
+          xmake-version: latest
       - name: configure
         run: cd ${{ github.workspace }} && xmake f -y
       - name: build
