Bugfix in cppbuild

--- a/.github/workflows/cppbuild.yml
+++ b/.github/workflows/cppbuild.yml
@@ -11,26 +11,12 @@ jobs:
         with:
           xmake-version: latest
       - name: configure
-        run: cd ${{ github.workspace }} && xmake f -y
+        run: cd ${{ github.workspace }} && xmake f -y --toolchain=clang
       - name: build
-        run: xmake b -w
+        run: xmake b -v
       - name: run-test-cases-10
         run: xmake r test_minic -Ls < test/minic-testcase/10.c
         
-  unix-job:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: xmake-io/github-action-setup-xmake@v1
-        with:
-          xmake-version: latest
-      - name: configure
-        run: cd ${{ github.workspace }} && xmake f -y
-      - name: build
-        run: xmake b -w
-      - name: run-test-cases-10
-        run: xmake r test_minic -Ls < test/minic-testcase/10.c
- 
   windows-job:
     runs-on: windows-latest
     steps:
@@ -39,9 +25,9 @@ jobs:
         with:
           xmake-version: latest
       - name: configure
-        run: cd ${{ github.workspace }} && xmake f -y
+        run: cd ${{ github.workspace }} && xmake f -y --toolchain=clang
       - name: build
-        run: xmake b -w
+        run: xmake b -v
       - name: run-test-cases-10
         run: xmake r test_minic -Ls < test/minic-testcase/10.c
 
