--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories(${CMAKE_HOME_DIRECTORY}/krill/include)
 
 add_executable(kriller kriller.cpp)
 add_executable(mico  mico.cpp)
+add_executable(calc  calc.cpp)
