--- a/.github/workflows/cppbuild.yml
+++ b/.github/workflows/cppbuild.yml
@@ -9,7 +9,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xmake-io/github-action-setup-xmake@v1
         with:
-          xmake-version: latest
+          xmake-version: '2.7.2'
+          actions-cache-folder: '.xmake-cache'
       - name: configure
         run: cd ${{ github.workspace }} && xmake f -y --toolchain=clang -m debug
       - name: build
@@ -45,7 +46,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: xmake-io/github-action-setup-xmake@v1
         with:
-          xmake-version: latest
+          xmake-version: '2.7.2'
+          actions-cache-folder: '.xmake-cache'
       - name: configure
         run: cd ${{ github.workspace }} && xmake f -y --toolchain=clang -m debug
       - name: build
