use doctest to test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,11 @@
 link_libraries(krill)
 include_directories(${CMAKE_HOME_DIRECTORY}/krill/include)
 
-add_executable(test_automata test_automata.cpp)
-add_executable(test_grammar test_grammar.cpp)
-add_executable(test_regex test_regex.cpp)
-add_executable(test_lexical test_lexical.cpp)
-add_executable(test_syntax test_syntax.cpp)
+add_executable(test_krill
+	test_main.cpp
+	test_automata.cpp
+	test_grammar.cpp
+	test_regex.cpp
+	test_lexical.cpp
+	test_syntax.cpp
+)
