--- a/krill/CMakeLists.txt
+++ b/krill/CMakeLists.txt
@@ -33,9 +33,20 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(cxxopts)
 message("Fetching Complete!")
 
+FetchContent_Declare(
+  doctest URL https://github.com/doctest/doctest/archive/refs/tags/v2.4.9.zip
+)
+FetchContent_MakeAvailable(doctest)
+message("Fetching Complete!")
+
 file (GLOB_RECURSE KRILL_HEADER include/*.h)
 file (GLOB_RECURSE KRILL_SRC    src/*.cpp)
 
 add_library(krill ${KRILL_SRC} ${KRILL_HEADER})
 target_link_libraries(krill PUBLIC fmt)
-target_link_libraries(krill PUBLIC spdlog::spdlog magic_enum::magic_enum cxxopts::cxxopts)
+target_link_libraries(krill PUBLIC 
+  spdlog::spdlog
+  magic_enum::magic_enum
+  cxxopts::cxxopts
+  doctest::doctest
+)
